prepare initial heroku push

--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
   "devDependencies": {},
   "scripts": {
     "start": "webpack --watch --mode=development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "webpack"
+  },
+  "engines": {
+    "node": "16.14.0",
+    "npm": "8.3.1"
   },
   "repository": {
     "type": "git",
