add public to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,8 @@
 /node_modules
 /yarn-error.log
 
-/public/assets
+# /public/assets
+/public
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
