--- a/config/database.yml
+++ b/config/database.yml
@@ -78,8 +78,12 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+# production:
+#   <<: *default
+#   database: petrehome_production
+#   username: petrehome
+#   password: <%= ENV['PETREHOME_DATABASE_PASSWORD'] %>
+
 production:
   <<: *default
-  database: petrehome_production
-  username: petrehome
-  password: <%= ENV['PETREHOME_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
