--- a/package.json
+++ b/package.json
@@ -1,38 +1,182 @@
 {
   "name": "petrehome",
-  "private": true,
-  "dependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
-    "redux": "^4.1.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.1",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
-  },
-  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
+  "description": "<a href=\"https://pet-rehome.herokuapp.com/#/\">Pet Rehome Live</a>",
   "main": "webpack.config.js",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
+  "dependencies": {
+    "acorn": "^8.7.0",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
+    "ansi-styles": "^3.2.1",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-polyfill-corejs2": "^0.3.1",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-polyfill-corejs3": "^0.5.2",
+    "big.js": "^5.2.2",
+    "babel-plugin-polyfill-regenerator": "^0.3.1",
+    "browserslist": "^4.20.2",
+    "acorn-import-assertions": "^1.8.0",
+    "call-bind": "^1.0.2",
+    "buffer-from": "^1.1.2",
+    "caniuse-lite": "^1.0.30001319",
+    "chalk": "^2.4.2",
+    "chrome-trace-event": "^1.0.3",
+    "clone-deep": "^4.0.1",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "colorette": "^2.0.16",
+    "commondir": "^1.0.1",
+    "convert-source-map": "^1.8.0",
+    "cross-spawn": "^7.0.3",
+    "core-js-compat": "^3.21.1",
+    "csstype": "^3.0.11",
+    "debug": "^4.3.4",
+    "deep-diff": "^0.3.8",
+    "define-properties": "^1.1.3",
+    "electron-to-chromium": "^1.4.88",
+    "enhanced-resolve": "^5.9.2",
+    "emojis-list": "^3.0.0",
+    "envinfo": "^7.8.1",
+    "es-module-lexer": "^0.9.3",
+    "escalade": "^3.1.1",
+    "eslint-scope": "^5.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "esrecurse": "^4.3.0",
+    "esutils": "^2.0.3",
+    "estraverse": "^4.3.0",
+    "events": "^3.3.0",
+    "execa": "^5.1.1",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fastest-levenshtein": "^1.0.12",
+    "find-up": "^4.1.0",
+    "find-cache-dir": "^3.3.2",
+    "function-bind": "^1.1.1",
+    "gensync": "^1.0.0-beta.2",
+    "get-intrinsic": "^1.1.1",
+    "get-stream": "^6.0.1",
+    "glob-to-regexp": "^0.4.1",
+    "graceful-fs": "^4.2.9",
+    "globals": "^11.12.0",
+    "has": "^1.0.3",
+    "has-flag": "^3.0.0",
+    "has-symbols": "^1.0.3",
+    "history": "^4.10.1",
+    "hoist-non-react-statics": "^3.3.2",
+    "human-signals": "^2.1.0",
+    "import-local": "^3.1.0",
+    "interpret": "^2.2.0",
+    "is-core-module": "^2.8.1",
+    "isarray": "^0.0.1",
+    "isexe": "^2.0.0",
+    "isobject": "^3.0.1",
+    "jest-worker": "^27.5.1",
+    "is-stream": "^2.0.1",
+    "js-tokens": "^4.0.0",
+    "jsesc": "^2.5.2",
+    "json-parse-better-errors": "^1.0.2",
+    "json5": "^2.2.0",
+    "json-schema-traverse": "^0.4.1",
+    "kind-of": "^6.0.3",
+    "loader-runner": "^4.2.0",
+    "loader-utils": "^1.4.0",
+    "locate-path": "^5.0.0",
+    "lodash.debounce": "^4.0.8",
+    "loose-envify": "^1.4.0",
+    "make-dir": "^3.1.0",
+    "merge-stream": "^2.0.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-fn": "^2.1.0",
+    "mini-create-react-context": "^0.4.1",
+    "minimist": "^1.2.5",
+    "ms": "^2.1.2",
+    "node-releases": "^2.0.2",
+    "neo-async": "^2.6.2",
+    "commander": "^2.20.3",
+    "npm-run-path": "^4.0.1",
+    "object-assign": "^4.1.1",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.2",
+    "onetime": "^5.1.2",
+    "p-limit": "^2.3.0",
+    "p-locate": "^4.1.0",
+    "p-try": "^2.2.0",
+    "path-key": "^3.1.1",
+    "path-exists": "^4.0.0",
+    "path-parse": "^1.0.7",
+    "picocolors": "^1.0.0",
+    "is-plain-object": "^2.0.4",
+    "prop-types": "^15.8.1",
+    "punycode": "^2.1.1",
+    "randombytes": "^2.1.0",
+    "react-dom": "^17.0.2",
+    "react": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-is": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "rechoir": "^0.7.1",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "regenerate": "^1.4.2",
+    "redux-thunk": "^2.4.1",
+    "regenerate-unicode-properties": "^10.0.1",
+    "regenerator-transform": "^0.14.5",
+    "regenerator-runtime": "^0.13.9",
+    "regjsgen": "^0.6.0",
+    "regjsparser": "^0.8.4",
+    "regexpu-core": "^5.0.1",
+    "resolve": "^1.22.0",
+    "resolve-cwd": "^3.0.0",
+    "resolve-pathname": "^3.0.0",
+    "resolve-from": "^5.0.0",
+    "safe-buffer": "^5.1.2",
+    "schema-utils": "^2.7.1",
+    "scheduler": "^0.20.2",
+    "semver": "^6.3.0",
+    "serialize-javascript": "^6.0.0",
+    "shallow-clone": "^3.0.1",
+    "shebang-regex": "^3.0.0",
+    "shebang-command": "^2.0.0",
+    "signal-exit": "^3.0.7",
+    "source-map": "^0.5.7",
+    "source-map-support": "^0.5.21",
+    "supports-color": "^5.5.0",
+    "strip-final-newline": "^2.0.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "tapable": "^2.2.1",
+    "terser": "^5.12.1",
+    "tiny-invariant": "^1.2.0",
+    "terser-webpack-plugin": "^5.3.1",
+    "tiny-warning": "^1.0.3",
+    "unicode-canonical-property-names-ecmascript": "^2.0.0",
+    "to-fast-properties": "^2.0.0",
+    "unicode-match-property-ecmascript": "^2.0.0",
+    "unicode-property-aliases-ecmascript": "^2.0.0",
+    "uri-js": "^4.4.1",
+    "unicode-match-property-value-ecmascript": "^2.0.0",
+    "value-equal": "^1.0.1",
+    "webpack": "^5.70.0",
+    "watchpack": "^2.3.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0",
+    "webpack-sources": "^3.2.3",
+    "wildcard": "^2.0.0",
+    "which": "^2.0.2",
+    "path-to-regexp": "^1.8.0",
+    "pkg-dir": "^4.2.0"
+  },
   "devDependencies": {},
   "scripts": {
-    "start": "webpack --watch --mode=development",
-    "build": "npm install --prefix frontend && npm run build --prefix frontend",
-    "postinstall": "webpack"
+    "build": "npm install --prefix frontend && npm run build --prefix frontend"
   },
   "engines": {
-    "node": "16.14.0",
-    "npm": "8.3.1"
+    "node": "16.14.0"
   },
   "repository": {
     "type": "git",
@@ -46,4 +190,3 @@
   },
   "homepage": "https://github.com/KevinCh28/petrehome#readme"
 }
-
