rails configuration update

--- a/package.json
+++ b/package.json
@@ -8,20 +8,22 @@
     "test": "test"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "acorn": "^8.7.0",
+    "acorn-import-assertions": "^1.8.0",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
     "ansi-styles": "^3.2.1",
     "babel-loader": "^8.2.3",
-    "babel-plugin-polyfill-corejs2": "^0.3.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-polyfill-corejs2": "^0.3.1",
     "babel-plugin-polyfill-corejs3": "^0.5.2",
-    "big.js": "^5.2.2",
     "babel-plugin-polyfill-regenerator": "^0.3.1",
+    "big.js": "^5.2.2",
     "browserslist": "^4.20.2",
-    "acorn-import-assertions": "^1.8.0",
-    "call-bind": "^1.0.2",
     "buffer-from": "^1.1.2",
+    "call-bind": "^1.0.2",
     "caniuse-lite": "^1.0.30001319",
     "chalk": "^2.4.2",
     "chrome-trace-event": "^1.0.3",
@@ -29,39 +31,40 @@
     "color-convert": "^1.9.3",
     "color-name": "^1.1.3",
     "colorette": "^2.0.16",
+    "commander": "^2.20.3",
     "commondir": "^1.0.1",
     "convert-source-map": "^1.8.0",
-    "cross-spawn": "^7.0.3",
     "core-js-compat": "^3.21.1",
+    "cross-spawn": "^7.0.3",
     "csstype": "^3.0.11",
     "debug": "^4.3.4",
     "deep-diff": "^0.3.8",
     "define-properties": "^1.1.3",
     "electron-to-chromium": "^1.4.88",
-    "enhanced-resolve": "^5.9.2",
     "emojis-list": "^3.0.0",
+    "enhanced-resolve": "^5.9.2",
     "envinfo": "^7.8.1",
     "es-module-lexer": "^0.9.3",
     "escalade": "^3.1.1",
-    "eslint-scope": "^5.1.1",
     "escape-string-regexp": "^1.0.5",
+    "eslint-scope": "^5.1.1",
     "esrecurse": "^4.3.0",
-    "esutils": "^2.0.3",
     "estraverse": "^4.3.0",
+    "esutils": "^2.0.3",
     "events": "^3.3.0",
     "execa": "^5.1.1",
     "fast-deep-equal": "^3.1.3",
     "fast-json-stable-stringify": "^2.1.0",
     "fastest-levenshtein": "^1.0.12",
-    "find-up": "^4.1.0",
     "find-cache-dir": "^3.3.2",
+    "find-up": "^4.1.0",
     "function-bind": "^1.1.1",
     "gensync": "^1.0.0-beta.2",
     "get-intrinsic": "^1.1.1",
     "get-stream": "^6.0.1",
     "glob-to-regexp": "^0.4.1",
-    "graceful-fs": "^4.2.9",
     "globals": "^11.12.0",
+    "graceful-fs": "^4.2.9",
     "has": "^1.0.3",
     "has-flag": "^3.0.0",
     "has-symbols": "^1.0.3",
@@ -71,16 +74,17 @@
     "import-local": "^3.1.0",
     "interpret": "^2.2.0",
     "is-core-module": "^2.8.1",
+    "is-plain-object": "^2.0.4",
+    "is-stream": "^2.0.1",
     "isarray": "^0.0.1",
     "isexe": "^2.0.0",
     "isobject": "^3.0.1",
     "jest-worker": "^27.5.1",
-    "is-stream": "^2.0.1",
     "js-tokens": "^4.0.0",
     "jsesc": "^2.5.2",
     "json-parse-better-errors": "^1.0.2",
-    "json5": "^2.2.0",
     "json-schema-traverse": "^0.4.1",
+    "json5": "^2.2.0",
     "kind-of": "^6.0.3",
     "loader-runner": "^4.2.0",
     "loader-utils": "^1.4.0",
@@ -95,9 +99,8 @@
     "mini-create-react-context": "^0.4.1",
     "minimist": "^1.2.5",
     "ms": "^2.1.2",
-    "node-releases": "^2.0.2",
     "neo-async": "^2.6.2",
-    "commander": "^2.20.3",
+    "node-releases": "^2.0.2",
     "npm-run-path": "^4.0.1",
     "object-assign": "^4.1.1",
     "object-keys": "^1.1.1",
@@ -106,74 +109,74 @@
     "p-limit": "^2.3.0",
     "p-locate": "^4.1.0",
     "p-try": "^2.2.0",
-    "path-key": "^3.1.1",
     "path-exists": "^4.0.0",
+    "path-key": "^3.1.1",
     "path-parse": "^1.0.7",
+    "path-to-regexp": "^1.8.0",
     "picocolors": "^1.0.0",
-    "is-plain-object": "^2.0.4",
+    "pkg-dir": "^4.2.0",
     "prop-types": "^15.8.1",
     "punycode": "^2.1.1",
     "randombytes": "^2.1.0",
-    "react-dom": "^17.0.2",
     "react": "^17.0.2",
-    "react-redux": "^7.2.6",
+    "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "rechoir": "^0.7.1",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "regenerate": "^1.4.2",
     "redux-thunk": "^2.4.1",
+    "regenerate": "^1.4.2",
     "regenerate-unicode-properties": "^10.0.1",
-    "regenerator-transform": "^0.14.5",
     "regenerator-runtime": "^0.13.9",
+    "regenerator-transform": "^0.14.5",
+    "regexpu-core": "^5.0.1",
     "regjsgen": "^0.6.0",
     "regjsparser": "^0.8.4",
-    "regexpu-core": "^5.0.1",
     "resolve": "^1.22.0",
     "resolve-cwd": "^3.0.0",
-    "resolve-pathname": "^3.0.0",
     "resolve-from": "^5.0.0",
+    "resolve-pathname": "^3.0.0",
     "safe-buffer": "^5.1.2",
-    "schema-utils": "^2.7.1",
     "scheduler": "^0.20.2",
+    "schema-utils": "^2.7.1",
     "semver": "^6.3.0",
     "serialize-javascript": "^6.0.0",
     "shallow-clone": "^3.0.1",
-    "shebang-regex": "^3.0.0",
     "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
     "signal-exit": "^3.0.7",
     "source-map": "^0.5.7",
     "source-map-support": "^0.5.21",
-    "supports-color": "^5.5.0",
     "strip-final-newline": "^2.0.0",
+    "supports-color": "^5.5.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
     "tapable": "^2.2.1",
     "terser": "^5.12.1",
-    "tiny-invariant": "^1.2.0",
     "terser-webpack-plugin": "^5.3.1",
+    "tiny-invariant": "^1.2.0",
     "tiny-warning": "^1.0.3",
-    "unicode-canonical-property-names-ecmascript": "^2.0.0",
     "to-fast-properties": "^2.0.0",
+    "unicode-canonical-property-names-ecmascript": "^2.0.0",
     "unicode-match-property-ecmascript": "^2.0.0",
+    "unicode-match-property-value-ecmascript": "^2.0.0",
     "unicode-property-aliases-ecmascript": "^2.0.0",
     "uri-js": "^4.4.1",
-    "unicode-match-property-value-ecmascript": "^2.0.0",
     "value-equal": "^1.0.1",
-    "webpack": "^5.70.0",
     "watchpack": "^2.3.1",
+    "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-merge": "^5.8.0",
     "webpack-sources": "^3.2.3",
-    "wildcard": "^2.0.0",
     "which": "^2.0.2",
-    "path-to-regexp": "^1.8.0",
-    "pkg-dir": "^4.2.0"
+    "wildcard": "^2.0.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "build": "npm install --prefix frontend && npm run build --prefix frontend"
+    "start": "webpack --watch --mode=development",
+    "build": "webpack --mode=production",
+    "postinstall": "webpack"
   },
   "engines": {
     "node": "16.14.0"
