--- a/package.json
+++ b/package.json
@@ -175,7 +175,7 @@
   },
   "scripts": {
     "start": "webpack --watch --mode=development",
-    "build": "webpack --mode=production",
+    "build": "npm install && webpack --mode=production",
     "postinstall": "webpack"
   },
   "engines": {
