--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,11 @@
 /config/master.key
 
 node_modules/
-bundle.js
+bundle.js*
 bundle.js.map
 .byebug_history
 .DS_Store
 npm-debug.log
+
+package-lock.json
+Gemfile.lock
