revert back to working heroku version

--- a/config/database.yml
+++ b/config/database.yml
@@ -78,12 +78,8 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-# production:
-#   <<: *default
-#   database: petrehome_production
-#   username: petrehome
-#   password: <%= ENV['PETREHOME_DATABASE_PASSWORD'] %>
-
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
+  database: petrehome_production
+  username: petrehome
+  password: <%= ENV['PETREHOME_DATABASE_PASSWORD'] %>
